--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-dynamic-search-bar": "^0.2.1",
+    "react-native-dynamic-vector-icons": "^0.2.1",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.5",
-    "react-navigation-stack": "^1.8.0"
+    "react-navigation-stack": "^1.8.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "reduxsauce": "^1.1.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
