--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.3",
+    "react-native-snap-carousel": "^3.8.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.5",
     "react-navigation-stack": "^1.8.0",
